--- a/industries-master/index.html
+++ b/industries-master/index.html
@@ -24,7 +24,7 @@
     <header role="banner">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand " href="index.html">Industries</a>
+          <a class="navbar-brand " href="index.html">K3 Pengolahan Limbah</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -35,28 +35,17 @@
                 <a class="nav-link active" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link" href="about.html">Landasan Hukum</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="projects.html">Projects</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="services.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown04">
-                  <a class="dropdown-item" href="services.html">Architectural Design</a>
-                  <a class="dropdown-item" href="services.html">Interior</a>
-                  <a class="dropdown-item" href="services.html">Building</a>
-                </div>
+                <a class="nav-link" href="projects.html">Lingkungan Kerja</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="blog.html">Blog</a>
+                <a class="nav-link" href="projects.html">Keselamatan Kerja</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="projects.html">APD</a>
               </li>
-            </ul>
-
-          
           </div>
         </div>
       </nav>
@@ -70,8 +59,7 @@
         <div class="container">
           <div class="row slider-text align-items-center justify-content-center">
             <div class="col-lg-7 text-center col-sm-12 element-animate">
-              <div class="btn-play-wrap mx-auto"><p class="mb-4"><a href="https://vimeo.com/59256790" data-fancybox data-ratio="2" class="btn-play"><span class="ion ion-ios-play"></span></a></p></div>
-              <h1 class="mb-4"><span>We Are Industrial Company</span></h1>
+              <h1 class="mb-4"><span>Pengolahan Limbah</span></h1>
               <p class="mb-5 w-75">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
             </div>
           </div>
@@ -82,8 +70,7 @@
         <div class="container">
           <div class="row slider-text align-items-center justify-content-center">
             <div class="col-lg-7 text-center col-sm-12 element-animate">
-              <div class="btn-play-wrap mx-auto"><p class="mb-4"><a href="https://vimeo.com/59256790" data-fancybox data-ratio="2" class="btn-play"><span class="ion ion-ios-play"></span></a></p></div>
-              <h1><span>Create, Enhance and Sustain</span></h1>
+              <h1><span>K3(Kesehatan, Keselamatan Kerja)</span></h1>
               <p class="mb-5 w-75">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
             </div>
           </div>
@@ -358,7 +345,7 @@
 
         <div class="row justify-content-center mb-5 element-animate">
           <div class="col-md-8 text-center">
-            <h2 class=" heading mb-4">Blog Posts</h2>
+            <h2 class=" heading mb-4">K3 (Kesehatan, Keselamatan Kerja)</h2>
             <p class="mb-5 lead">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
           </div>
         </div>
