--- a/industries-master/lingkungan_kerja.html
+++ b/industries-master/lingkungan_kerja.html
@@ -24,7 +24,7 @@
     <header role="banner">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand " href="index.html">Industries</a>
+          <a class="navbar-brand " href="index.html">K3 Indonesia</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -35,10 +35,10 @@
                 <a class="nav-link " href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="about.html">About</a>
+                <a class="nav-link" href="about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="projects.html">Projects</a>
+                <a class="nav-link active" href="projects.html">Projects</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle " href="services.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
@@ -71,7 +71,7 @@
         <div class="container">
           <div class="row slider-text align-items-center justify-content-center">
             <div class="col-md-8 text-center col-sm-12 element-animate pt-5">
-              <h1 class="pt-5"><span>About Us</span></h1>
+              <h1 class="pt-5"><span>Intercate Custom Design</span></h1>
               <p class="mb-5 w-75 pl-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
             </div>
           </div>
@@ -81,101 +81,34 @@
     </div>
     <!-- END slider -->
     </div>
-
-    <section class="section bg-light">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-lg-4 element-animate ">
-            <div class="media block-6 d-block text-center">
-              <div class="icon mb-3"><span class="ion-bookmark text-primary"></span></div>
-              <div class="media-body">
-                <h3 class="heading">Automotive Parts</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-              </div>
-            </div>  
-
-          </div>
-          <div class="col-md-6 col-lg-4 element-animate ">
-            <div class="media block-6 d-block text-center">
-              <div class="icon mb-3"><span class="ion-heart text-primary"></span></div>
-              <div class="media-body">
-                <h3 class="heading">Maintenance Services</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-              </div>
-            </div> 
-
-          </div>
-          <div class="col-md-6 col-lg-4 element-animate ">
-            <div class="media block-6 d-block text-center">
-              <div class="icon mb-3"><span class="ion-leaf text-primary"></span></div>
-              <div class="media-body">
-                <h3 class="heading">Green Energy</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-              </div>
-            </div> 
-
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- END section -->
     
     <section class="section">
       <div class="container">
-        <div class="row justify-content-center mb-5 element-animate">
-          <div class="col-md-8 text-center">
-            <h2 class="heading mb-4">Meet The Team</h2>
-            <p class="mb-5 lead">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove.</p>
-          </div>
-        </div>
         <div class="row">
-          <div class="col-lg-3">
-            <div class="media d-block media-custom text-center">
-              <a href="#"><img src="images/person_1.jpg" alt="Image Placeholder" class="img-fluid"></a>
-              <div class="media-body">
-                <h3 class="mt-0 text-black">James Doe</h3>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <div class="media d-block media-custom text-center">
-              <a href="#"><img src="images/person_2.jpg" alt="Image Placeholder" class="img-fluid"></a>
-              <div class="media-body">
-                <h3 class="mt-0 text-black">Mike Roger</h3>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <div class="media d-block media-custom text-center">
-              <a href="#"><img src="images/person_4.jpg" alt="Image Placeholder" class="img-fluid"></a>
-              <div class="media-body">
-                <h3 class="mt-0 text-black">Jim Smith</h3>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <div class="media d-block media-custom text-center">
-              <a href="#"><img src="images/person_3.jpg" alt="Image Placeholder" class="img-fluid"></a>
-              <div class="media-body">
-                <h3 class="mt-0 text-black">Rich Gold</h3>
-              </div>
-            </div>
+          <div class="col-12" style="margin-top: -150px;">
+            <p><img src="images/hero_1.jpg" alt="Image" class="img-fluid"></p>
           </div>
         </div>
-        
-      </div>
-    </section>
-    <!-- END section -->
-
-    <section class="section bg-primary">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-lg-8">
-            <h2 class="text-white mb-0">Create, Enhance and Sustain</h2>
-            <p class="text-white lead">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. .</p>
+        <div class="row justify-content-center">
+          <div class="col-md-8 mb-5">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero nulla delectus sit vel magnam, ad voluptatem hic. Maxime ipsam quibusdam eius exercitationem iusto, totam possimus dolore magnam voluptatum illum consequuntur.</p>
           </div>
-          <div class="col-lg-4 text-lg-right">
-            <a href="https://free-template.co/" class="btn btn-outline-white px-4 py-3">Download This Template</a>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-8 mb-5">
+            <h2>&ldquo; Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium sapiente ratione nesciunt saepe ipsam, officiis reiciendis doloribus vero, facilis maiores incidunt vel eaque non illo animi voluptatem similique&rdquo;</h2>
+          </div>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col-md-8">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero nulla delectus sit vel magnam, ad voluptatem hic. Maxime ipsam quibusdam eius exercitationem iusto, totam possimus dolore magnam voluptatum illum consequuntur.</p>
+            <p>Deserunt cupiditate error repudiandae doloribus est sit id ad repellendus voluptates molestiae ratione eaque, iure, odit culpa delectus harum asperiores ab a aut, molestias possimus! Tempore commodi iste soluta voluptatibus.</p>
+            <p>Quaerat vero velit voluptatem nostrum natus ipsa, eius dicta veritatis iste odio maiores harum nesciunt reiciendis, dolore eum animi error quia earum enim beatae omnis, laudantium minima ab ut accusamus.</p>
+            <p>Voluptatem, ullam, beatae. Libero ad nemo, id. Quidem facilis, eaque iste ducimus dicta quia quaerat quisquam cum ab, velit voluptate at optio vero, nostrum enim, a officiis rerum recusandae eum?</p>
+            <p class="mb-5">Laboriosam recusandae vitae aliquid veritatis facilis omnis architecto officia, explicabo deleniti doloribus odio sequi, harum id suscipit ipsa laborum, ducimus. Sequi quasi vitae necessitatibus harum ab pariatur eos perspiciatis quo!</p>
+
+            <p><a href="#" class="btn btn-primary py-3 px-3">Visit Website</a></p>
           </div>
         </div>
       </div>
