--- a/industries-master/keselamatan_kerja.html
+++ b/industries-master/keselamatan_kerja.html
@@ -20,11 +20,10 @@
 
   </head>
   <body>
-    
-    <header role="banner">
+     <header role="banner">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand " href="index.html">Industries</a>
+          <a class="navbar-brand " href="index.html">K3 Indonesia</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -32,27 +31,18 @@
           <div class="collapse navbar-collapse" id="navbarsExample05">
             <ul class="navbar-nav pl-md-5 ml-auto">
               <li class="nav-item">
-                <a class="nav-link " href="index.html">Home</a>
+                <a class="nav-link active" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link" href="landasan_hukum.html">Landasan Hukum</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="projects.html">Projects</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle " href="services.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown04">
-                  <a class="dropdown-item" href="services.html">Architectural Design</a>
-                  <a class="dropdown-item" href="services.html">Interior</a>
-                  <a class="dropdown-item" href="services.html">Building</a>
+                <a class="nav-link" href="lingkungan_kerja.html">Lingkungan Kerja</a>
+
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="blog.html">Blog</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="apd.html">APD</a>
               </li>
             </ul>
 
@@ -66,13 +56,18 @@
     <div class="top-shadow"></div>
 
     <div class="inner-page">
-    <div class="slider-item" style="background-image: url('images/hero_2.jpg');">
+    <div class="slider-item" style="background-color: white;">
         
         <div class="container">
           <div class="row slider-text align-items-center justify-content-center">
             <div class="col-md-8 text-center col-sm-12 element-animate pt-5">
-              <h1 class="pt-5"><span>Our Projects</span></h1>
-              <p class="mb-5 w-75 pl-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <h1 class="pt-5"><span>Keselamatan Kerja</span></h1>
+              <p class="mb-5 w-75 pl-0">Kesehatan dan keselamatan kerja di dalam perusahaan pengolahan limbah 
+industri memiliki peranan yang sangat penting karena berhubungan langsung 
+dengan bahaya yang ada. Resiko kecelakaan dan juga penyakit  kerja sangat 
+tinggi apabila tidak ada pengendalian yang tepat. Oleh karena itu, perlu 
+dianalisis faktor-faktor yang menjadi penyebab timbulnya bahaya serta 
+faktor-faktor yang dapat mencegah dan mengendalikan risiko di tempat kerja. .</p>
             </div>
           </div>
         </div>
@@ -86,7 +81,7 @@
       <div class="container">
         <div class="row justify-content-center mb-5 element-animate">
           <div class="col-md-8 text-center">
-            <h2 class=" heading mb-4">Our Latest Projects</h2>
+            <h2 class=" heading mb-4">Faktor-faktor yang mempengaruhi keselamatan kerja</h2>
             <p class="mb-5 lead">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
           </div>
         </div>
