--- a/industries-master/landasan_hukum.html
+++ b/industries-master/landasan_hukum.html
@@ -22,7 +22,7 @@
   <body>
     
     <header role="banner">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-white">
         <div class="container-fluid">
           <a class="navbar-brand " href="index.html">K3 Indonesia</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,7 +60,7 @@
     <div class="top-shadow"></div>
 
     <div class="inner-page">
-    <div class="slider-item" style="background-image: url('images/hero_2.jpg');">
+    <div class="slider-item";>
         
         <div class="container">
           <div class="row slider-text align-items-center justify-content-center">
