--- a/industries-master/index.html
+++ b/industries-master/index.html
@@ -167,7 +167,7 @@
               <h2 class="block-41-heading mb-5">K3 (Kesehatan, Keselamatan Kerja)</h2>
               <div class="block-41-text">
                 <p>Segala upaya untuk menjamin dan melindungi keselamatan serta kesehatan tenaga kerja melalui pencegahan kecelakaan kerja dan penyakit akibat kerja. Konsep ini berlaku di semua lingkungan kerja, baik industri maupun kantor, untuk menciptakan tempat kerja yang aman, efisien, dan produktif.</p>
-                <p><a href="#" class="readmore">Read More <span class="ion-android-arrow-dropright-circle"></span></a></p>
+                <p><a href="landasan_hukum.html" class="nav-link">Read More <span class="ion-android-arrow-dropright-circle"></span></a></p>
               </div>
             </div>
           </div>
