--- a/industries-master/keselamatan_kerja.html
+++ b/industries-master/keselamatan_kerja.html
@@ -22,32 +22,30 @@
   <body>
      <header role="banner">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
+        < class="container-fluid">
           <a class="navbar-brand " href="index.html">K3 Indonesia</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
-          <div class="collapse navbar-collapse" id="navbarsExample05">
+    
+              <div class="collapse navbar-collapse" id="navbarsExample05">
             <ul class="navbar-nav pl-md-5 ml-auto">
               <li class="nav-item">
-                <a class="nav-link active" href="index.html">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="landasan_hukum.html">Landasan Hukum</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="lingkungan_kerja.html">Lingkungan Kerja</a>
-
-                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="keselamatan_kerja.html">Keselamatan Kerja</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="apd.html">APD</a>
               </li>
-            </ul>
-
-          
-          </div>
         </div>
       </nav>
     </header>
