--- a/industries-master/keselamatan_kerja.html
+++ b/industries-master/keselamatan_kerja.html
@@ -19,46 +19,48 @@
     <link rel="stylesheet" href="css/style.css">
 
     <style>
-      /* Navbar putih dengan text hitam */
+      /* Navbar dengan warna aesthetic */
       .navbar-white {
         background: #ffffff !important;
         box-shadow: 0 2px 20px rgba(0,0,0,0.1);
         transition: all 0.3s ease;
       }
       .navbar-white .navbar-brand {
-        color: #2c3e50 !important;
+        color: #2d3436 !important;
         font-weight: 700;
         font-size: 1.4rem;
       }
       .navbar-white .nav-link {
-        color: #2c3e50 !important;
+        color: #2d3436 !important;
         font-weight: 500;
         margin: 0 0.3rem;
         padding: 0.5rem 1rem !important;
         transition: all 0.3s ease;
       }
       .navbar-white .nav-link:hover {
-        color: #fd5f01 !important;
+        color: #6c5ce7 !important;
       }
       .navbar-white .nav-link.active {
-        color: #fd5f01 !important;
+        color: #6c5ce7 !important;
+        font-weight: 600;
       }
       .navbar-white .navbar-toggler {
-        border-color: #2c3e50;
+        border-color: #2d3436;
       }
       .navbar-white .navbar-toggler-icon {
-        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%2844, 62, 80, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%2845, 52, 54, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
       }
 
       body {
         padding-top: 80px;
-        background: #f8f9fa;
+        background: #fafafa;
         min-height: 100vh;
+        color: #2d3436;
       }
 
-      /* Hero Section dengan warna orange #fd5f01 */
+      /* Hero Section dengan gradient aesthetic */
       .hero-section {
-        background: #fd5f01;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         padding: 100px 0 80px;
         color: white;
         position: relative;
@@ -87,6 +89,7 @@
         font-weight: 800;
         margin-bottom: 1.5rem;
         text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+        color: #ffffff !important;
       }
       .hero-subtitle {
         font-size: 1.4rem;
@@ -95,19 +98,20 @@
         max-width: 600px;
         margin: 0 auto;
         line-height: 1.6;
+        color: rgba(255, 255, 255, 0.95) !important;
       }
 
       /* Main container */
       .main-container {
         background: #ffffff;
         border-radius: 20px;
-        box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+        box-shadow: 0 10px 30px rgba(0,0,0,0.08);
         margin: -40px auto 0;
         position: relative;
         z-index: 2;
       }
 
-      /* Section titles dengan warna orange #fd5f01 */
+      /* Section titles dengan warna aesthetic */
       .section-title {
         position: relative;
         text-align: center;
@@ -116,7 +120,7 @@
       .section-title .heading {
         font-size: 2.5rem;
         font-weight: 700;
-        color: #2c3e50;
+        color: #2d3436;
         margin-bottom: 1rem;
         display: inline-block;
       }
@@ -128,22 +132,23 @@
         transform: translateX(-50%);
         width: 80px;
         height: 4px;
-        background: #fd5f01;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         border-radius: 2px;
       }
       .section-title .lead {
         font-size: 1.2rem;
-        color: #7f8c8d;
+        color: #636e72;
         max-width: 700px;
         margin: 0 auto;
       }
+      
 
-      /* Category headers dengan orange #fd5f01 */
+      /* Category headers dengan gradient aesthetic */
       .category-header {
         text-align: center;
         margin-bottom: 3rem;
         padding: 2rem;
-        background: #fd5f01;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         border-radius: 15px;
         color: white;
         position: relative;
@@ -170,6 +175,7 @@
         margin-bottom: 0.5rem;
         position: relative;
         z-index: 2;
+        color: #ffffff !important;
       }
       .category-header .icon {
         font-size: 3rem;
@@ -177,9 +183,13 @@
         display: block;
         position: relative;
         z-index: 2;
+        color: #ffffff !important;
+      }
+      .category-header p {
+        color: rgba(255, 255, 255, 0.9) !important;
       }
 
-      /* Factor cards dengan aksen orange #fd5f01 */
+      /* Factor cards dengan aksen aesthetic */
       .factor-card {
         background: white;
         border-radius: 15px;
@@ -190,7 +200,7 @@
         transition: all 0.4s ease;
         position: relative;
         overflow: hidden;
-        border-left: 6px solid #fd5f01;
+        border-left: 6px solid #6c5ce7;
       }
       .factor-card::before {
         content: '';
@@ -199,7 +209,7 @@
         left: 0;
         right: 0;
         height: 4px;
-        background: #fd5f01;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       }
       .factor-card:hover {
         transform: translateY(-5px);
@@ -211,13 +221,13 @@
         justify-content: center;
         width: 70px;
         height: 70px;
-        background: #fd5f01;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         color: white;
         border-radius: 50%;
         font-weight: bold;
         font-size: 1.5rem;
         margin-bottom: 1.5rem;
-        box-shadow: 0 5px 15px rgba(253, 95, 1, 0.4);
+        box-shadow: 0 5px 15px rgba(108, 92, 231, 0.4);
         transition: all 0.3s ease;
       }
       .factor-card:hover .factor-number {
@@ -226,24 +236,24 @@
       .factor-card h4 {
         font-size: 1.4rem;
         font-weight: 600;
-        color: #2c3e50;
+        color: #2d3436;
         margin-bottom: 1rem;
         line-height: 1.4;
       }
       .factor-card strong {
-        color: #fd5f01;
+        color: #6c5ce7;
         display: block;
         margin-bottom: 0.8rem;
         font-size: 1.1rem;
         font-weight: 600;
       }
       .factor-card p {
-        color: #5d6d7e;
+        color: #636e72;
         line-height: 1.7;
         font-size: 1.05rem;
       }
       .factor-card ul {
-        color: #5d6d7e;
+        color: #636e72;
         line-height: 1.7;
       }
       .factor-card ul li {
@@ -255,7 +265,7 @@
         content: '✓';
         position: absolute;
         left: 0;
-        color: #fd5f01;
+        color: #6c5ce7;
         font-weight: bold;
       }
 
@@ -270,7 +280,7 @@
         transition: all 0.4s ease;
         position: relative;
         overflow: hidden;
-        border-left: 6px solid #fd5f01;
+        border-left: 6px solid #6c5ce7;
         height: 100%;
       }
       .prevention-card::before {
@@ -280,7 +290,7 @@
         left: 0;
         right: 0;
         height: 4px;
-        background: #fd5f01;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       }
       .prevention-card:hover {
         transform: translateY(-5px);
@@ -289,7 +299,7 @@
       .prevention-icon {
         width: 80px;
         height: 80px;
-        background: #fd5f01;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         border-radius: 50%;
         display: flex;
         align-items: center;
@@ -297,7 +307,7 @@
         margin: 0 auto 2rem;
         color: white;
         font-size: 2rem;
-        box-shadow: 0 5px 15px rgba(253, 95, 1, 0.4);
+        box-shadow: 0 5px 15px rgba(108, 92, 231, 0.4);
         transition: all 0.3s ease;
       }
       .prevention-card:hover .prevention-icon {
@@ -306,11 +316,11 @@
       .prevention-card h4 {
         font-size: 1.3rem;
         font-weight: 600;
-        color: #2c3e50;
+        color: #2d3436;
         margin-bottom: 1rem;
       }
       .prevention-card p {
-        color: #7f8c8d;
+        color: #636e72;
         line-height: 1.6;
         font-size: 1.05rem;
       }
@@ -328,14 +338,14 @@
         transform: scale(1.02);
       }
 
-      /* Highlight section dengan orange #fd5f01 */
+      /* Highlight section dengan gradient aesthetic */
       .highlight-section {
-        background: #fd5f01;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         border-radius: 20px;
         padding: 3rem;
         color: white;
         margin: 4rem 0;
-        box-shadow: 0 15px 35px rgba(253, 95, 1, 0.3);
+        box-shadow: 0 15px 35px rgba(108, 92, 231, 0.3);
         position: relative;
         overflow: hidden;
         text-align: center;
@@ -357,6 +367,7 @@
         margin-bottom: 2rem;
         position: relative;
         z-index: 2;
+        color: #ffffff !important;
       }
       .highlight-section p {
         font-size: 1.1rem;
@@ -365,15 +376,16 @@
         position: relative;
         z-index: 2;
         opacity: 0.95;
+        color: rgba(255, 255, 255, 0.95) !important;
       }
       .highlight-section strong {
-        color: #2c3e50;
+        color: #dfe6e9;
         font-weight: 700;
       }
 
       /* CTA section dengan dark theme */
       .cta-section {
-        background: #2c3e50;
+        background: #2d3436;
         color: white;
         padding: 4rem 0;
         text-align: center;
@@ -396,6 +408,7 @@
         margin-bottom: 1.5rem;
         position: relative;
         z-index: 2;
+        color: #ffffff !important;
       }
       .cta-section .lead {
         font-size: 1.2rem;
@@ -406,6 +419,7 @@
         max-width: 600px;
         margin-left: auto;
         margin-right: auto;
+        color: rgba(255, 255, 255, 0.9) !important;
       }
 
       /* Responsive */
@@ -730,7 +744,7 @@
     <div id="loader" class="show fullscreen">
       <svg class="circular" width="48px" height="48px">
         <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/>
-        <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#f4b214"/>
+        <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#6c5ce7"/>
       </svg>
     </div>
 
