--- a/industries-master/landasan_hukum.html
+++ b/industries-master/landasan_hukum.html
@@ -427,10 +427,39 @@
         color: white;
       }
 
-      /* Footer styling */
+      /* Footer styling - PERBAIKAN */
       .site-footer {
-        background: white;
-        color: black;
+        background: #ffffff !important;
+        color: #2d3436 !important;
+        border-top: 1px solid #e0e0e0;
+      }
+
+      .site-footer h3 {
+        color: #2d3436 !important;
+      }
+
+      .site-footer p,
+      .site-footer li,
+      .site-footer span {
+        color: #636e72 !important;
+      }
+
+      .site-footer a {
+        color: #6c5ce7 !important;
+        transition: color 0.3s ease;
+      }
+
+      .site-footer a:hover {
+        color: #5b4bd4 !important;
+      }
+
+      /* Social media icons */
+      .site-footer .footer-social a {
+        color: #636e72 !important;
+      }
+
+      .site-footer .footer-social a:hover {
+        color: #6c5ce7 !important;
       }
 
       /* Responsive */
@@ -703,8 +732,8 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-md-4 mb-5">
-            <h3>About Us</h3>
-            <p class="mb-5">Situs ini menyediakan informasi tentang Keselamatan dan Kesehatan Kerja (K3) khususnya di industri pengelolaan limbah, untuk meningkatkan kesadaran dan pemahaman tentang pentingnya keselamatan kerja.</p>
+            <h3>Tentang Kami</h3>
+            <p class="mb-5">K3 Pengolahan Limbah berkomitmen untuk menciptakan lingkungan kerja yang aman dan sehat bagi seluruh pekerja dalam industri pengelolaan limbah berbahaya.</p>
             <ul class="list-unstyled footer-link d-flex footer-social">
               <li><a href="#" class="p-2"><span class="fa fa-twitter"></span></a></li>
               <li><a href="#" class="p-2"><span class="fa fa-facebook"></span></a></li>
@@ -713,14 +742,14 @@
             </ul>
           </div>
           <div class="col-md-5 mb-5 pl-md-5">
-            <h3>Contact Info</h3>
+            <h3>Informasi Kontak</h3>
             <ul class="list-unstyled footer-link">
               <li class="d-block">
-                <span class="d-block">Address:</span>
+                <span class="d-block">Alamat:</span>
                 <span>Jurusan Teknologi Informasi, Politeknik Negeri Malang</span>
               </li>
               <li class="d-block">
-                <span class="d-block">Telephone:</span>
+                <span class="d-block">Telepon:</span>
                 <span>+62 341 404424</span>
               </li>
               <li class="d-block">
@@ -730,10 +759,9 @@
             </ul>
           </div>
           <div class="col-md-3 mb-5">
-            <h3>Quick Links</h3>
+            <h3>QUICK LINKS</h3>
             <ul class="list-unstyled footer-link">
               <li><a href="index.html">Home</a></li>
-              <li><a href="landasan_hukum.html">Landasan Hukum</a></li>
               <li><a href="lingkungan_kerja.html">Lingkungan Kerja</a></li>
               <li><a href="keselamatan_kerja.html">Keselamatan Kerja</a></li>
               <li><a href="apd.html">APD</a></li>
@@ -744,7 +772,7 @@
           <div class="col-12 text-md-center text-left">
             <p>
               Copyright &copy;
-              <script>document.write(new Date().getFullYear());</script> All rights reserved | Situs K3 Indonesia
+              <script>document.write(new Date().getFullYear());</script> | Kel 1-SIB 3B | Sistem Informasi K3 Pengolahan Limbah
             </p>
           </div>
         </div>
