--- a/industries-master/keselamatan_kerja.html
+++ b/industries-master/keselamatan_kerja.html
@@ -422,6 +422,41 @@
         color: rgba(255, 255, 255, 0.9) !important;
       }
 
+      /* Footer styling - PERBAIKAN */
+      .site-footer {
+        background: #ffffff !important;
+        color: #2d3436 !important;
+        border-top: 1px solid #e0e0e0;
+      }
+
+      .site-footer h3 {
+        color: #2d3436 !important;
+      }
+
+      .site-footer p,
+      .site-footer li,
+      .site-footer span {
+        color: #636e72 !important;
+      }
+
+      .site-footer a {
+        color: #6c5ce7 !important;
+        transition: color 0.3s ease;
+      }
+
+      .site-footer a:hover {
+        color: #5b4bd4 !important;
+      }
+
+      /* Social media icons */
+      .site-footer .footer-social a {
+        color: #636e72 !important;
+      }
+
+      .site-footer .footer-social a:hover {
+        color: #6c5ce7 !important;
+      }
+
       /* Responsive */
       @media (max-width: 768px) {
         .hero-title {
@@ -510,7 +545,7 @@
             <!-- Gambar Utama -->
             <div class="row mb-5">
               <div class="col-md-12">
-                <img src="https://images.unsplash.com/photo-1581091226033-d5c48150dbaa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1200&q=80" alt="Keselamatan Kerja di Industri Pengolahan Limbah" class="content-image">
+                <img src="images/k31.jpg" alt="Keselamatan Kerja di Industri Pengolahan Limbah" class="content-image">
               </div>
             </div>
 
@@ -594,10 +629,10 @@
             <!-- Gambar Pendukung -->
             <div class="row mb-5">
               <div class="col-md-6">
-                <img src="https://images.unsplash.com/photo-1581092580497-e0d23cbdf1dc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80" alt="Penggunaan APD di Industri Limbah" class="content-image">
+                <img src="images/k32.jpg" alt="Penggunaan APD di Industri Limbah" class="content-image">
               </div>
               <div class="col-md-6">
-                <img src="https://images.unsplash.com/photo-1581092580497-e0d23cbdf1dc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80" alt="Proses Pengolahan Limbah yang Aman" class="content-image">
+                <img src="images/k31.png" alt="Proses Pengolahan Limbah yang Aman" class="content-image">
               </div>
             </div>
 
@@ -692,8 +727,8 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-md-4 mb-5">
-            <h3>About Us</h3>
-            <p class="mb-5">Situs ini menyediakan informasi tentang Keselamatan dan Kesehatan Kerja (K3) khususnya di industri pengelolaan limbah, untuk meningkatkan kesadaran dan pemahaman tentang pentingnya keselamatan kerja.</p>
+            <h3>Tentang Kami</h3>
+            <p class="mb-5">K3 Pengolahan Limbah berkomitmen untuk menciptakan lingkungan kerja yang aman dan sehat bagi seluruh pekerja dalam industri pengelolaan limbah berbahaya.</p>
             <ul class="list-unstyled footer-link d-flex footer-social">
               <li><a href="#" class="p-2"><span class="fa fa-twitter"></span></a></li>
               <li><a href="#" class="p-2"><span class="fa fa-facebook"></span></a></li>
@@ -702,14 +737,14 @@
             </ul>
           </div>
           <div class="col-md-5 mb-5 pl-md-5">
-            <h3>Contact Info</h3>
+            <h3>Informasi Kontak</h3>
             <ul class="list-unstyled footer-link">
               <li class="d-block">
-                <span class="d-block">Address:</span>
+                <span class="d-block">Alamat:</span>
                 <span>Jurusan Teknologi Informasi, Politeknik Negeri Malang</span>
               </li>
               <li class="d-block">
-                <span class="d-block">Telephone:</span>
+                <span class="d-block">Telepon:</span>
                 <span>+62 341 404424</span>
               </li>
               <li class="d-block">
@@ -719,12 +754,11 @@
             </ul>
           </div>
           <div class="col-md-3 mb-5">
-            <h3>Quick Links</h3>
+            <h3>QUICK LINKS</h3>
             <ul class="list-unstyled footer-link">
               <li><a href="index.html">Home</a></li>
               <li><a href="landasan_hukum.html">Landasan Hukum</a></li>
               <li><a href="lingkungan_kerja.html">Lingkungan Kerja</a></li>
-              <li><a href="keselamatan_kerja.html">Keselamatan Kerja</a></li>
               <li><a href="apd.html">APD</a></li>
             </ul>
           </div>
@@ -733,7 +767,7 @@
           <div class="col-12 text-md-center text-left">
             <p>
               Copyright &copy;
-              <script>document.write(new Date().getFullYear());</script> All rights reserved | Situs K3 Indonesia
+              <script>document.write(new Date().getFullYear());</script> | Kel 1-SIB 3B | Sistem Informasi K3 Pengolahan Limbah
             </p>
           </div>
         </div>
