--- a/industries-master/apd.html
+++ b/industries-master/apd.html
@@ -52,6 +52,46 @@
       body {
         padding-top: 80px;
       }
+
+      /* Footer styling - PERBAIKAN */
+      .site-footer {
+        background: #ffffff !important;
+        color: #2d3436 !important;
+        border-top: 1px solid #e0e0e0;
+      }
+
+      .site-footer h3 {
+        color: #2d3436 !important;
+      }
+
+      .site-footer p,
+      .site-footer li,
+      .site-footer span {
+        color: #636e72 !important;
+      }
+
+      .site-footer a {
+        color: #6c5ce7 !important;
+        transition: color 0.3s ease;
+      }
+
+      .site-footer a:hover {
+        color: #5b4bd4 !important;
+      }
+
+      /* Social media icons */
+      .site-footer .footer-social a {
+        color: #636e72 !important;
+      }
+
+      .site-footer .footer-social a:hover {
+        color: #6c5ce7 !important;
+      }
+
+      /* Loader color */
+      .path {
+        stroke: #6c5ce7 !important;
+      }
     </style>
 
   </head>
@@ -306,20 +346,26 @@
               <li><a href="#" class="p-2"><span class="fa fa-linkedin"></span></a></li>
               <li><a href="#" class="p-2"><span class="fa fa-instagram"></span></a></li>
             </ul>
-
           </div>
           <div class="col-md-5 mb-5 pl-md-5">
             <h3>Informasi Kontak</h3>
             <ul class="list-unstyled footer-link">
               <li class="d-block">
                 <span class="d-block">Alamat:</span>
-                <span>Jl. Industri No. 123, Malang, Jawa Timur, Indonesia</span></li>
-              <li class="d-block"><span class="d-block">Telepon:</span><span>+62 341 123 4567</span></li>
-              <li class="d-block"><span class="d-block">Email:</span><span>info@k3limbah.co.id</span></li>
+                <span>Jurusan Teknologi Informasi, Politeknik Negeri Malang</span>
+              </li>
+              <li class="d-block">
+                <span class="d-block">Telepon:</span>
+                <span>+62 341 404424</span>
+              </li>
+              <li class="d-block">
+                <span class="d-block">Email:</span>
+                <span>k3@polinema.ac.id</span>
+              </li>
             </ul>
           </div>
           <div class="col-md-3 mb-5">
-            <h3>Link Cepat</h3>
+            <h3>QUICK LINKS</h3>
             <ul class="list-unstyled footer-link">
               <li><a href="index.html">Home</a></li>
               <li><a href="landasan_hukum.html">Landasan Hukum</a></li>
@@ -331,9 +377,9 @@
         </div>
         <div class="row">
           <div class="col-12 text-md-center text-left">
-             <p>
+            <p>
               Copyright &copy;
-              <script>document.write(new Date().getFullYear());</script> K3 Pengolahan Limbah. Keselamatan dan Kesehatan Kerja adalah Prioritas Utama.
+              <script>document.write(new Date().getFullYear());</script> All rights reserved | Kel 1-SIB 3B
             </p>
           </div>
         </div>
@@ -342,7 +388,7 @@
     <!-- END footer -->
 
     <!-- loader -->
-    <div id="loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#f4b214"/></svg></div>
+    <div id="loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#6c5ce7"/></svg></div>
 
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/popper.min.js"></script>
